<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/name"
        android:minHeight="48dp"
        android:inputType="text"
        android:paddingTop="20dp"
        tools:ignore="VisualLintTextFieldSize" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Author"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/author"
        android:minHeight="48dp"
        android:paddingTop="20dp"
        android:inputType="text"
        tools:ignore="VisualLintTextFieldSize" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/description"
        android:minHeight="100dp"
        android:paddingTop="20dp"
        android:inputType="textMultiLine"
        android:lines="5"
    android:scrollHorizontally="false"
    android:gravity="top|start"
    tools:ignore="VisualLintTextFieldSize" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/date"
        android:minHeight="48dp"
        android:paddingTop="20dp"
        android:inputType="date"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/done"
        tools:ignore="VisualLintButtonSize" />
</LinearLayout>